# rtl-dv-synthesis-lab

./: CMakeLists.txt  CMakePresets.json
projects/binary_adder/docs/: .md  binary_adder_spec.md
projects/binary_adder/model/: CMakeLists.txt  golden_model.cpp  golden_modle.h
projects/binary_adder/sim/: build
projects/binary_adder/sim/vector/: CMakeLists.txt  gen_golden_vectors.cpp  golden_vectors.hex
